--- a/donation.html
+++ b/donation.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-        <meta charset="UTF-8">
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
@@ -39,155 +39,68 @@
     </div>
 
     <div class="container">
+        <br>
+        <!-- Jumbotron Title -->
         <div class="jumbotron">
-            <h1 class="text-center">Donation</h1>
-            <h3 class="text-center">Look Good, Feel Good</h3>
-
+            <h1 class="text-center">Donations</h1>
+            <h3 class="text-center">"Look Good, Feel Good"</h3>
         </div>
-
         <div class="row">
             <div class="col-lg-12">
                 <div class="card card-default">
                     <div class="card-body">
-
-                        <h3 class="text-center"></h3>
-                        <strong>Also please view our About page </strong>
+                        <h3 class="text-center">
+                            <strong>Also Please View Our About page Maps to purchase Wigs </strong>
                     </div>
                 </div>
-
             </div>
-
         </div>
-
+        <!-- Product -->
         <div class="row">
             <div class="col-lg-12">
                 <div class="card card-default">
                     <div class="card-body">
                         <div class="row">
+                            <div class="col-sm-4 col-sm-offset-2">
+                                <img class="img-fluid thumbnail center-block" src="" alt="C">
+                            </div>
                             <div class="col-sm-6">
                                 <h3 class="">
-                                    <strong>Donation Amount</strong>
-                                    <span class="Donation amount"></span>
+                                    <strong>Total Amount:</strong>
+                                    <span id="total-amount"></span>
                                 </h3>
                                 <hr>
-                                <h3 class="">Wigs
-
-                                </h3>
+                                <h3 class="">Hurry!
+                                    <strong>
+                                        <span id="connected-viewers"></span>
+                                    </strong> Every Penny Maters </h3>
                             </div>
                         </div>
-
                     </div>
                 </div>
             </div>
         </div>
+        <!-- Donation -->
         <div class="row">
             <div class="col-lg-12">
                 <div class="card card-default">
                     <div class="card-header">
-                        READY
+                        Ready
                     </div>
                     <div class="card-body">
                         <form>
                             <div class="form-group row">
-                                <label for="email-name"></label>
-                                <input class="form-control" id="user-name" type="text">
+                                <label for="bidder-name">Email Address</label>
+                                <input class="form-control" id="bidder-name" type="text">
                             </div>
                             <div class="form-group row">
-                                <label for="donation"></label>
-                                <input class="form-control" id="donation-price" type="text">
+                                <label for="donation-amount">Donation Amount: $</label>
+                                <input class="form-control" id="donation-price" type="number">
                             </div>
+                            <button class="btn btn-primary" id="submit-bid" type="submit">Submit</button>
                         </form>
-
                     </div>
-
                 </div>
             </div>
         </div>
-
     </div>
-    </div>
-
-
-
-    <script src="https://code.jquery.com/jquery-3.4.1.js"
-        integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
-
-
-
-    <form onsubmit="addDonation()" method="get">
-        Email name: <input type="text" id="Email"><br>
-        <!-- Last name: <input type="text" id="lname"><br> -->
-        Donation amount: $<input type="number" id="Donation"><br>
-        <input type="submit" value="Submit">
-    </form>
-    <!-- The core Firebase JS SDK is always required and must be listed first -->
-    <script src="https://www.gstatic.com/firebasejs/5.11.1/firebase-app.js"></script><!-- Firebase Reference -->
-
-
-    <!-- TODO: Add SDKs for Firebase products that you want to use
-     https://firebase.google.com/docs/web/setup#config-web-app -->
-
-    <script>
-
-
-        // Your web app's Firebase configuration
-        var firebaseConfig = {
-            apiKey: "AIzaSyADal6zffVZta4iCM6c2rt0z912h0HmUtg",
-            authDomain: "real-project-f550f.firebaseapp.com",
-            databaseURL: "https://real-project-f550f.firebaseio.com",
-            projectId: "real-project-f550f",
-            storageBucket: "real-project-f550f.appspot.com",
-            messagingSenderId: "269825768903",
-            appId: "1:269825768903:web:be38a868db46ff5e",
-        };
-        // Initialize Firebase
-        firebase.initializeApp(firebaseConfig);
-
-
-        var database = firebase.database();
-
-        // 2. Button for adding 
-        $("#add-Fname-btn").on("click", function (event) {
-            event.preventDefault();
-
-            // Grabs user input
-
-            // var firstname = $("#fname-input").val().trim();
-            var emailName = $("#emailName-input").val().trim();
-            var DonationStart = $("#Donation-inpu").val().trim();
-            var NewDonation = $("#Ndonation-input").val().trim();
-
-
-            function addDonation(event) {
-                event.preventDefault()
-
-                // Creates local "temporary" object for holding employee data
-
-                var emailName = $("#emailName").val()
-                var DonationStart = $("#Donatio").val()
-                var DonationAmount = $("#Donation").val()
-
-                // Creates local "temporary" object for holding employee data 
-
-
-                var NewDonation = {
-                    emailName: emailName,
-                    donationName: donationName,
-                    DonationAmount: DonationAmount,
-
-                };
-
-                console.log(NewDonation)
-
-
-
-
-            }
-
-
-
-    
-
-</body >
-
-</html >
