--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <a class="nav-link" href="contact.html">Contact</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="maps.html">Maps</a>
+                <a class="nav-link" href="getwigs.html">Get Your Wigs!</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="donation.html">Donation</a>
@@ -50,12 +50,6 @@
                     <p class="quote">
                         " Everyone Knows Someone & They Should Never Wonder If there Beautiful "
                     </p>
-                </div>
-                <div class="row">
-                    <div class="col-md-12">
-                        <!-- Let's Begin Button -->
-                        <input class="btn btn-primary" type="button" value="Lets Begin !">
-                    </div>
                 </div>
             </div>
 
