--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
                 <a class="nav-link" href="contact.html">Contact</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="maps.html">Maps</a>
+                <a class="nav-link" href="getwigs.html">Get Your Wigs!</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="donation.html">Donation</a>
