--- a/donation.html
+++ b/donation.html
@@ -29,7 +29,7 @@
                     <a class="nav-link" href="contact.html">Contact</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="maps.html">Maps</a>
+                    <a class="nav-link" href="getwigs.html">Get Your Wigs!</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link active" href="donation.html">Donation</a>
@@ -38,22 +38,12 @@
         </div>
     </div>
 
-    <div class="container">
+    <div class="container_donation">
         <br>
         <!-- Jumbotron Title -->
         <div class="jumbotron">
-            <h1 class="text-center">Donations</h1>
-            <h3 class="text-center">"Look Good, Feel Good"</h3>
-        </div>
-        <div class="row">
-            <div class="col-lg-12">
-                <div class="card card-default">
-                    <div class="card-body">
-                        <h3 class="text-center">
-                            <strong>Also Please View Our About page Maps to purchase Wigs </strong>
-                    </div>
-                </div>
-            </div>
+            <h1>Donations</h1>
+            <h3>"Look Good, Feel Good"</h3>
         </div>
         <!-- Product -->
         <div class="row">
@@ -61,19 +51,9 @@
                 <div class="card card-default">
                     <div class="card-body">
                         <div class="row">
-                            <div class="col-sm-4 col-sm-offset-2">
-                                <img class="img-fluid thumbnail center-block" src="" alt="C">
-                            </div>
-                            <div class="col-sm-6">
-                                <h3 class="">
-                                    <strong>Total Amount:</strong>
+                            <div class="col-md-12">
+                                    <p>Total Amount:</p>
                                     <span id="total-amount"></span>
-                                </h3>
-                                <hr>
-                                <h3 class="">Hurry!
-                                    <strong>
-                                        <span id="connected-viewers"></span>
-                                    </strong> Every Penny Maters </h3>
                             </div>
                         </div>
                     </div>
@@ -82,11 +62,8 @@
         </div>
         <!-- Donation -->
         <div class="row">
-            <div class="col-lg-12">
+            <div class="col-md-12">
                 <div class="card card-default">
-                    <div class="card-header">
-                        Ready
-                    </div>
                     <div class="card-body">
                         <form>
                             <div class="form-group row">
