--- a/register.html
+++ b/register.html
@@ -25,7 +25,7 @@
                 <a class="nav-link" href="about.html">About</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link active" href="contact.html">Contact</a>
+                <a class="nav-link active" href="register.html">Register</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="getwigs.html">Get Your Wigs!</a>
@@ -48,9 +48,6 @@
 
             <label for="psw"><b>Password</b></label>
             <input type="password" placeholder="Enter Password" name="psw" required>
-
-            <label for="psw-repeat"><b>Repeat Password</b></label>
-            <input type="password" placeholder="Repeat Password" name="psw-repeat" required>
 
             <hr>
 
