--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
                 <a class="nav-link active" href="about.html">About</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="contact.html">Contact</a>
+                <a class="nav-link" href="register.html">Register</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="getwigs.html">Get Your Wigs!</a>
