--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <a class="nav-link" href="about.html">About</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="contact.html">Contact</a>
+                <a class="nav-link" href="register.html">Register</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="getwigs.html">Get Your Wigs!</a>
@@ -50,6 +50,9 @@
                     <p class="quote">
                         " Everyone Knows Someone & They Should Never Wonder If there Beautiful "
                     </p>
+                    <a class="nav-link" href="register.html">
+                        <button class="btn btn-primary index" id="submit-bid" type="submit">Register</button>
+                    </a>
                 </div>
             </div>
 
