--- a/donation.html
+++ b/donation.html
@@ -9,7 +9,8 @@
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
-    <link href="https://fonts.googleapis.com/css?family=Just+Another+Hand" rel="stylesheet">
+    <link href="https://www.googleapis.com/webfonts/v1/webfonts?key=AIzaSyDrBgrA85X6tDFAFR7X7kpuSVAt4huDoKY"
+        rel="stylesheet">
     <title>Donation</title>
 
 </head>
@@ -52,8 +53,8 @@
                     <div class="card-body">
                         <div class="row">
                             <div class="col-md-12">
-                                    <p>Total Amount:</p>
-                                    <span id="total-amount"></span>
+                                <p>Total Amount:</p>
+                                <span id="total-amount"></span>
                             </div>
                         </div>
                     </div>
@@ -81,3 +82,18 @@
             </div>
         </div>
     </div>
+    <script type="text/javascript" src="http://www.google.com/jsapi"></script>
+    <script type="text/javascript">
+        google.load('webfont', '1');
+        google.setOnLoadCallback(function () {
+            WebFont.load({
+                google: {
+                    families: ['Just Another Hand']
+                }
+            });
+        });
+    </script>
+
+</body>
+
+</html>
