--- a/register.html
+++ b/register.html
@@ -38,30 +38,106 @@
 
     <form>
         <div class="container_contact">
-            <h1>Register</h1>
-            <p>Please fill in this form to create an account.</p>
+            <div id="contactForm">
+                <h1>Register</h1>
+                <p>Please fill in this form to create an account.</p>
 
-            <hr>
+                <hr>
 
-            <label for="email"><b>Email</b></label>
-            <input type="text" placeholder="Enter Email" name="email" required>
+                <label for="email"><b>Email</b></label>
+                <input id="email" type="text" placeholder="Enter Email" name="email" required>
 
-            <label for="psw"><b>Password</b></label>
-            <input type="password" placeholder="Enter Password" name="psw" required>
+                <label for="psw"><b>Password</b></label>
+                <input id="psw" type="password" placeholder="Enter Password" name="psw" required>
 
-            <hr>
+                <hr>
 
-            <p>By creating an account you agree to our <a href="#">Terms & Privacy</a>.</p>
+                <p>By creating an account you agree to our <a href="#">Terms & Privacy</a>.</p>
 
-            <button type="submit" class="registerbtn">Register</button>
-        </div>
+                <button type="submit" class="registerbtn">Register</button>
+            </div>
 
-        <div class="container_signin">
-            <p>
-                Already have an account? <a href="#">Sign in</a>.
-            </p>
-        </div>
+            <div class="container_signin">
+                <p>
+                    Already have an account? <a href="#">Sign in</a>.
+                </p>
+            </div>
     </form>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+
+    <!-- The core Firebase JS SDK is always required and must be listed first -->
+
+    <!-- The core Firebase JS SDK is always required and must be listed first -->
+    <script src="https://www.gstatic.com/firebasejs/6.0.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/3.1.0/firebase-database.js"></script>
+    <!-- <script src="/__/firebase/6.0.0/firebase-app.js"></script> -->
+
+    <!-- TODO: Add SDKs for Firebase products that you want to use --> -->
+    <!-- https://firebase.google.com/docs/web/setup#reserved-urls
+
+     Initialize Firebase -->
+    <!-- <script src="/__/firebase/init.js"></script> -->
+
+    <script>
+        const firebaseConfig = {
+            apiKey: "AIzaSyBX47_jo2SukE4Rj1ntBJVsOh-XBrPVtOM",
+            authDomain: "contact-form-83f90.firebaseapp.com",
+            databaseURL: "https://contact-form-83f90.firebaseio.com",
+            projectId: "contact-form-83f90",
+            storageBucket: "contact-form-83f90.appspot.com",
+            messagingSenderId: "922341667118",
+            appId: "1:922341667118:web:41cab26d1b1f1669"
+        };
+        firebase.initializeApp(firebaseConfig);
+
+
+        // Create a variable to reference the database.
+        var database = firebase.database();
+        console.log(database);
+
+
+
+
+        // call form
+        document.getElementById("contactForm").addEventListener("registerbtn", submitForm);
+
+        function submitForm(e) {
+            e.preventDefault();
+            console.log(123);
+        }
+        // get values
+
+        var email = $("#email").val().trim();
+        var psw = $("#psw").val().trim();
+        // var pswRepeat = $("#pswRepeat").val().trim();
+        // console.log(email);
+        console.log(psw);
+        // console.log(pswRepeat)
+
+
+        // Function to get forms
+        // function getInputVal(id) {
+        //     return document.getElementById(id).value;
+        //     console.log();
+        // }
+
+        function saveMessage(email, psw) {
+            var newMessageRef = messageRef.push()
+            newMessageRef.set({
+                email: email,
+                psw: psw,
+                // pswRepeat: pswRepeat,
+            })
+        }
+        // database.ref("#submit").set({
+        //     highBidder: bidderName,
+        //     highPrice: bidderPrice
+        // });
+
+
+
+    </script>
 
 </body>
 
