updated about page

--- a/donation.html
+++ b/donation.html
@@ -17,8 +17,8 @@
 
 <body>
 
-    <div class="card text-center">
-        <div class="card-header">
+    <!-- Navbar -->
+    <div class="card-header">
             <ul class="nav nav-tabs card-header-tabs">
                 <li class="nav-item">
                     <a class="nav-link" href="index.html">Home</a>
@@ -37,7 +37,6 @@
                 </li>
             </ul>
         </div>
-    </div>
 
     <div class="container_donation">
         <br>
