--- a/getwigs.html
+++ b/getwigs.html
@@ -13,17 +13,17 @@
         rel="stylesheet">
     <title>maps</title>
     <style>
+
         /* Always set the map height explicitly to define the size of the div
-       * element that contains the map. */
+   * element that contains the map. */
+
         #map {
             height: 500px;
             width: 1000px;
-            margin-left: 250px;
-
+            margin: auto;
         }
 
         /* Optional: Makes the sample page fill the window. */
-
 
         #description {
             font-family: Roboto;
@@ -97,6 +97,7 @@
             width: 345px;
         }
     </style>
+
 </head>
 
 <body>
@@ -122,20 +123,13 @@
         </ul>
     </div>
 
-    <div class="container_map">
-        <P class="text-center">
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatum, eius vero. Ex, adipisci eum? Ut
-                facere
-                asperiores veritatis error qui dolorum repudiandae iusto modi assumenda. Modi ipsum laborum ab cum.</p>
-            <br>
-            <div class="image">
-                =<iframe width="760" height="560" src="https://www.youtube.com/embed/yvnglnhESZc" frameborder="0"
-                    allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                    allowfullscreen></iframe>
-            </div>
-        </P>
+    <div class="container_getwigs">
+        <div class="image">
+            =<iframe width="760" height="560" src="https://www.youtube.com/embed/yvnglnhESZc" frameborder="0"
+                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
+        </div>
 
-        <br>
         <div class="text-center">
             <div class="content">
                 <h2>Search for Salons near you!</h2>
