--- a/donation.html
+++ b/donation.html
@@ -79,7 +79,7 @@
                 google: {
                     families: ['Just Another Hand']
                 }
-            });
+            });git 
         });
     </script>
 
