--- a/donation-page1.html
+++ b/donation-page1.html
@@ -42,7 +42,7 @@
                                 <input class="form-control" id="email-input" type="email">
                             </div>
                             <div class="form-group row">
-                                <label for="donation-amount-input">donation:</label>
+                                <label for="donation-amount-input">Donation Amout $:</label>
 
                                 <input class="form-control" id="donation-amount-input" type="number">
                             </div>
@@ -83,22 +83,29 @@
     <script src="https://www.gstatic.com/firebasejs/4.12.0/firebase.js"></script>
 
     <!-- Script -->
+       <!-- The core Firebase JS SDK is always required and must be listed first -->
+    <script src="https://www.gstatic.com/firebasejs/6.0.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/3.1.0/firebase-database.js"></script>
+    <!-- <script src="/__/firebase/6.0.0/firebase-app.js"></script> -->
+
+    <!-- TODO: Add SDKs for Firebase products that you want to use --> -->
+    <!-- https://firebase.google.com/docs/web/setup#reserved-urls
+
+ Initialize Firebase -->
+    <!-- <script src="/__/firebase/init.js"></script> -->
+
     <script>
-        // START CODING BELOW!!
-
-        //const firebaseConfig = {
-        // Initialize Firebase
-        var config = {
-            apiKey: "AIzaSyDf5-kvOxcgPqCuK6ZxnXW2yYE1FK52SKE",
-            authDomain: "real-project-251fd.firebaseapp.com",
-            databaseURL: "https://real-project-251fd.firebaseio.com",
-            projectId: "real-project-251fd",
-            storageBucket: "real-project-251fd.appspot.com",
+        const firebaseConfig = {
+            apiKey: "AIzaSyBX47_jo2SukE4Rj1ntBJVsOh-XBrPVtOM",
+            authDomain: "contact-form-83f90.firebaseapp.com",
+            databaseURL: "https://contact-form-83f90.firebaseio.com",
+            projectId: "contact-form-83f90",
+            storageBucket: "contact-form-83f90.appspot.com",
+            messagingSenderId: "922341667118",
+            appId: "1:922341667118:web:41cab26d1b1f1669"
         };
+        firebase.initializeApp(firebaseConfig);
 
-        firebase.initializeApp(config);
-
-        // Create a variable to reference the database
         var database = firebase.database();
 
         // Initial Values
