--- a/index.html
+++ b/index.html
@@ -5,12 +5,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <!-- bootstrap -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <!-- reset css -->
     <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
+    <!-- style css -->
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
-    <link href="https://www.googleapis.com/webfonts/v1/webfonts?key=AIzaSyDrBgrA85X6tDFAFR7X7kpuSVAt4huDoKY"
-        rel="stylesheet">
+    <!-- google font -->
+    <link href="https://fonts.googleapis.com/css?family=Amatic+SC|Ubuntu+Condensed" rel="stylesheet">
     <title>Home</title>
 </head>
 
