--- a/index.html
+++ b/index.html
@@ -54,6 +54,9 @@
                     <p class="quote">
                         " Everyone Knows Someone & They Should Never Wonder If there Beautiful "
                     </p>
+
+                </div>
+                <div class="row">
                     <a class="nav-link" href="register.html">
                         <button class="btn btn-primary index" id="submit-bid" type="submit">Register</button>
                     </a>
