--- a/register.html
+++ b/register.html
@@ -41,7 +41,7 @@
     </div>
 
     <form>
-        <div class="container_contact">
+        <div class="container_register">
             <div id="contactForm">
                 <h1>Register</h1>
                 <p>Please fill in this form to create an account.</p>
@@ -53,19 +53,10 @@
 
                 <label for="psw"><b>Password</b></label>
                 <input id="psw" type="password" placeholder="Enter Password" name="psw" required>
-
-                <hr>
-
-                <p>By creating an account you agree to our <a href="#">Terms & Privacy</a>.</p>
-
+                <br>
                 <button type="submit" class="registerbtn">Register</button>
             </div>
 
-            <div class="container_signin">
-                <p>
-                    Already have an account? <a href="#">Sign in</a>.
-                </p>
-            </div>
     </form>
     <script type="text/javascript" src="http://www.google.com/jsapi"></script>
     <script type="text/javascript">
@@ -88,7 +79,7 @@
     <script src="https://www.gstatic.com/firebasejs/3.1.0/firebase-database.js"></script>
     <!-- <script src="/__/firebase/6.0.0/firebase-app.js"></script> -->
 
-    <!-- TODO: Add SDKs for Firebase products that you want to use --> -->
+    <!-- TODO: Add SDKs for Firebase products that you want to use -->
     <!-- https://firebase.google.com/docs/web/setup#reserved-urls
 
      Initialize Firebase -->
