--- a/register.html
+++ b/register.html
@@ -53,10 +53,19 @@
 
                 <label for="psw"><b>Password</b></label>
                 <input id="psw" type="password" placeholder="Enter Password" name="psw" required>
-                <br>
+
+                <hr>
+<!-- 
+                <p>By creating an account you agree to our <a href="#">Terms & Privacy</a>.</p> -->
+
                 <button type="submit" class="registerbtn">Register</button>
             </div>
 
+            <!-- <div class="container_signin">
+                <p>
+                    Already have an account? <a href="#">Sign in</a>.
+                </p>
+            </div> -->
     </form>
     <script type="text/javascript" src="http://www.google.com/jsapi"></script>
     <script type="text/javascript">
